--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         pip install pyinstaller
 
     - name: Build executable
-      run: pyinstaller --onefile --noconsole --name main_macos mainpy.py
+      run: pyinstaller --onefile --noconsole --name main_macos main.py
 
     - name: Upload executable
       uses: actions/upload-artifact@v3
