--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,11 @@ jobs:
       with:
         python-version: 3.x
 
+    - name: Clean previous builds
+      run: |
+          rm -rf build
+          rm -rf dist
+
     - name: Install PyInstaller
       run: |
         python -m pip install --upgrade pip
